test/official_tests/while/var_in_body.lox
// error: {"line":2,"message":"expect expression","type":"ParseError"}
while (true) var foo;
